--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "crud-zombies": "npm start --prefix crud-zombies",
-    "dev": "concurrently \"npm run server\" \"npm run crud-zombies\""
+    "dev": "concurrently \"npm run server\" \"npm run crud-zombies\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix crud-zombies && npm run build --prefix crud-zombies"
   },
   "keywords": [],
   "author": "",
